# raytracing

./: .gitignore  LICENSE  meson.build
example/: main.cpp  meson.build
include/: raytracing-png.hpp  raytracing-vector.hpp  raytracing.hpp
source/: main.cpp  raytracing-png.cpp  raytracing-vector.cpp
source/png/: png.cpp  png.hpp
subprojects/: gtest.wrap  rapidcheck.wrap
test/: meson.build  test-vector.cpp
